--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-02-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	(sys_wll_init): Deleted.  No longer required.  And this time,
+	with feeling!
+	(sys_wll_exit): Ditto.
+
 2000-02-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* NEWS: updated.
